Updated for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nbtechfront",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://NabilElHakimi.github.io/nbtechfront",
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "gh-pages": "^5.0.0"
   }
 }
